--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ after_success:
   - docker build -t wkrause13/multi-server ./server
   - docker build -t wkrause13/multi-nginx ./nginx
   - docker build -t wkrause13/multi-worker ./worker
-  - echo "$DOCKER_PASSWoRD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push wkrause13/multi-client
   - docker push wkrause13/multi-server
   - docker push wkrause13/multi-nginx
