--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,15 @@ after_success:
   - docker push wkrause13/multi-server
   - docker push wkrause13/multi-nginx
   - docker push wkrause13/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-463980401187"
+  bucket_path: "multi-docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
